kubernetes/argo-cd/projects/nebius/production-hm/apicurio-registry/environments/production/kubernetes-manifests/hm-apicurio-registry-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hm-apicurio-registry-deployment
  namespace: production-hm-apicurio-registry
  labels:
    app.kubernetes.io/name: apicurio-registry
    app.kubernetes.io/part-of: production-hm-apicurio-registry
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apicurio-registry
  template:
    metadata:
      labels:
        app: apicurio-registry
    spec:
      nodeSelector:
        environment: production
      tolerations:
        - key: environment
          operator: Equal
          value: production
          effect: NoSchedule
      containers:
        - name: apicurio-registry
          image: harbor.hongbomiao.com/docker-hub-proxy-cache/apicurio/apicurio-registry:3.2.4
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /apis/registry/v3/system/info
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /apis/registry/v3/system/info
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: 1Gi
              cpu: 500m
